Alignment Fixes for screen shot

--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,10 @@ button:focus,
  *-----------------------------*/
 
 .header {
-    padding  : 20px !important;
+    padding-top: 10px !important;
+    padding-right: 20px !important;
+    padding-bottom: 10px !important;
+    padding-left: 20px !important;
     margin   : 0;
     position : relative;
     }
@@ -455,7 +458,7 @@ button:focus,
  *-------------------*/
 
 .content-item {
-    margin-bottom : 40px;
+    margin-bottom : 0px;
     }
 
 .content-item h3 {
